syntax = "proto3";

package velez_api;

import "npm.proto";
import "google/api/annotations.proto";

option go_package = "go.vervstack.ru/velez/pkg/velez_api;velez_api";
option (npm_package) = "@vervstack/velez";

// Verv Private Network
service VpnApi {
  rpc CreateNamespace(CreateVpnNamespace.Request) returns (CreateVpnNamespace.Response) {
    option (google.api.http) = {
      post: "/api/vpn/namespaces/new",
      body: "*",
    };
  };

  rpc ListNamespaces(ListVpnNamespaces.Request) returns (ListVpnNamespaces.Response) {
    option (google.api.http) = {
      post: "/api/vpn/namespaces/list",
      body: "*",
    };
  };

  rpc ConnectService(ConnectService.Request) returns (ConnectService.Response) {
    option (google.api.http) = {
      post: "/api/vpn/services/connect",
      body: "*",
    };
  }


  //  Not implemented
  rpc DeleteNamespace(DeleteVpnNamespace.Request) returns (DeleteVpnNamespace.Response) {
    option (google.api.http) = {
      post: "/api/vpn/namespaces/delete",
      body: "*",
    };
  };
}

message CreateVpnNamespace {
  message Request {
    string name = 1;
  }
  message Response {
    Namespace namespace = 1;
  }
}

message ListVpnNamespaces {
  message Request {

  }
  message Response {
    repeated Namespace namespaces = 1;
  }
}

message DeleteVpnNamespace {
  message Request {
    string id = 1;
  }
  message Response {}
}

message ConnectService {
  message Request {
    string namespace_id = 1;
    string service_name = 2;
    // not implemented
    optional string domain_name = 3;
  }
  message Response {}
}

message Namespace {
  string id = 1;
  string name = 2;
}

